# mib-challenge-v1

./: .dockerignore  .gitignore  ATTRIBUTION.md  CONTRIBUTIONS.md  Dockerfile  MEMO.md  README.md  SUBMISSION.md  TRANSFER_AUDIT.md  pyproject.toml  solution.py
mib_pipeline/: adjudication.py  arjun_answer_key.py  arjun_heads.py  batch.py  extraction.py  rapid_recovery.py
src/mib/: __init__.py  cli.py  confidence_table.json  evidence.py  normalize.py  ocr.py  pdf_text.py  pipeline.py  policy.py  schema.py  worker.py
tests/: test_arjun_heads.py  test_cli.py  test_evidence.py  test_normalize.py  test_ocr.py  test_pdf_text.py  test_pipeline.py  test_policy.py
tools/: finalize_submission_package.sh  postprocess_owned_heads.py  run_chunked.py  run_validation_v79.sh
tools/overnight_135/: README.md  embargo_status_experiment.py  experiment_runner.py  ink_stamp_scan.py  stamp_hunter.py
