[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "mib-doc-solution"
version = "0.1.0"
description = "Offline visible-evidence document processing for the MIB Doc Challenge"
requires-python = ">=3.12"
dependencies = [
    "onnxruntime>=1.22,<2",
    "PyMuPDF>=1.26,<2",
    "rapidocr>=3.9.1,<4",
    "pyclipper>=1.2.0",
    "opencv-python-headless>=4.5,<6",
]

[project.scripts]
mib-process = "mib.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.3,<9",
    "scikit-learn>=1.7,<2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mib = ["confidence_table.json"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
